<resources>
    <string name="app_name">mobile_exam</string>
    <string name="button">convert</string>
    <string name="textview">TextView</string>
    <string name="nh_p_kh_i_l_ng_kg">Nhập khối lượng (kg)</string>
    <string name="chuy_n_i">Chuyển đổi</string>
    <string name="k_t_qu_s_hi_n_th_t_i_y">Kết quả sẽ hiển thị tại đây</string>
    <string name="Title">French Teacher App</string>
    <string name="black">Black</string>
    <string name="green">Green</string>
    <string name="purple">Purple</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="btn_addition">Addition</string>
    <string name="btn_subtraction">Subtraction</string>
    <string name="textview_luckky">welcome to lucky number</string>
    <string name="plese_enter_your_lucky_number">plese enter your name</string>
    <string name="btn_lucky">wish me a luck</string>
    <string name="btn_share">share my lucky number</string>
    <string name="textview_10">Your lucky number is:</string>
    <string name="number">number</string>
    <string name="myApp">MY_APP</string>
    <string name="life">Life</string>
    <string name="score">score</string>
    <string name="n">n</string>
    <string name="timer">Timer</string>
    <string name="plese_write_your_answer">Plese write your answer</string>
    <string name="TextView">Text View</string>
    <string name="ok">OK</string>
    <string name="nextQuestion">Next question</string>
    <string name="exit">Exit</string>
    <string name="play_again">Play again</string>
    <string name="btn_Multiplication">Multiplication</string>
    <string name="congratulation">Congratulation</string>
</resources>